--- a/_pgbackup/index_1473686727.html
+++ b/_pgbackup/index_1473686727.html
@@ -33,10 +33,10 @@
     </head>
     <body id="page-top" class="index">
         <!-- Navigation -->
-        <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top navigasi-atas">
+        <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand page-scroll navbar-bg white guardsman-hover" href="#page-top">Adhitya &amp; Aneta</a>
+                <a class="navbar-brand page-scroll black bg-white navbar-bg black-hover" href="#page-top">Adhitya &amp; Aneta</a>
                 <div class="navbar-header page-scroll">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span> Menu 
@@ -69,7 +69,6 @@
             </div>
             <!-- /.container-fluid -->
         </nav>
-        <div class="the-blur"></div>
         <!-- Header -->
         <header>
             <div class="container">
@@ -309,7 +308,7 @@
                             </li>
                             <li class="timeline-inverted">
                                 <div class="timeline-image">
-                                    <h4 class="timeline-h4">Be Part<br>Of Our<br>Story!</h4>
+                                    <h4>Be Part<br>Of Our<br>Story!</h4>
                                 </div>
                             </li>
                         </ul>
@@ -702,6 +701,6 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
         <script type="text/javascript" src="components/pg.blocks/js/plugins.js"></script>
         <script type="text/javascript" src="components/pg.blocks/js/bskit-scripts.js"></script>
-        <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAaFB7tdUVMzKmxshMG9znVCz13SDm7Lgs&sensor=true"></script>
+        <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=true"></script>
     </body>
 </html>
