--- a/_pgbackup/index_1473688514.html
+++ b/_pgbackup/index_1473688514.html
@@ -36,7 +36,7 @@
         <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top navigasi-atas">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand page-scroll navbar-bg white guardsman-hover" href="#page-top">Adhitya &amp; Aneta</a>
+                <a class="navbar-brand page-scroll black bg-white navbar-bg black-hover" href="#page-top">Adhitya &amp; Aneta</a>
                 <div class="navbar-header page-scroll">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span> Menu 
@@ -66,10 +66,10 @@
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <!-- /.navbar-collapse -->
+                <div class="the-blur"></div>
             </div>
             <!-- /.container-fluid -->
         </nav>
-        <div class="the-blur"></div>
         <!-- Header -->
         <header>
             <div class="container">
