add gmaps support
+gmaps direction
+gmaps coloful is back

--- a/_pgbackup/index_1473692214.html
+++ b/_pgbackup/index_1473692214.html
@@ -138,7 +138,7 @@
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                 </div>
-                <div class="map min-height-500px" data-map-zoom="15" data-map-lat="-7.336694" data-map-long="112.715449" data-marker-image="img/love-marker.png"></div>
+                <div class="map min-height-500px" data-map-zoom="15" data-map-lat="-7.336694" data-map-long="112.715449"></div>
                 <div class="row pg-empty-placeholder"></div>
             </div>
         </section>
