--- a/_pgbackup/index_1473713007.html
+++ b/_pgbackup/index_1473713007.html
@@ -81,7 +81,7 @@
         <section id="countdown" class="content-block promo-2 bg-image-cover min-height-100px waves-effect waves-circle waves-light soft-scroll bg-sunflower" data-end-date="Dec 18, 2016">
             <div class="container">
                 <div class="coming-soon text-center">
-                    <h2 class="white">Countdown to Wedding Day<br>18 Desember 2016</h2>
+                    <h2 class="white">Countdown to Wedding Day</h2>
                     <div class="row countDown">
                         <div class="countDown-wrap countDown-wrap-kecil">
                             <span class="digits" data-animation-1></span>
