--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#countdown">RSVP</a>
+                            <a class="page-scroll" href="#countdown" id="button-rsvp">RSVP</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#wedding">THE WEDDING</a>
+                            <a class="page-scroll" href="#wedding" id="button-thewedding">THE WEDDING</a>
                         </li>
                         <li>
 </li>
@@ -84,7 +84,7 @@
                             <a class="page-scroll" href="#story">STORY OF US</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#wishlist">WISHLIST</a>
+                            <a class="page-scroll" href="#Galery">GALERY</a>
                         </li>
                     </ul>
                 </div>
@@ -114,14 +114,14 @@
             </div> -->
         <!-- <div class="typer welcome-message" data-typer-targets='{ "targets" : ["18 Desember 2016","Masjid Al-Akbar Surabaya","Jl. Masjid Al-Akbar Timur No.1 Pagesangan,Jawa Timur","Akad Nikah : Pukul 07.00 WIB", "Adhitya &#x2764 Aneta"]}'></div> -->
     </header>
-    <section id="countdown" class="content-block promo-2 bg-image-cover min-height-100px waves-effect waves-circle waves-light soft-scroll bg-sunflower" data-end-date="Dec 18, 2016">
+    <section id="countdown" class="content-block promo-2 bg-image-cover min-height-100px waves-effect waves-circle waves-light soft-scroll bg-sunflower" data-end-date="Oct 15, 2016">
         <div class="container">
             <div class="coming-soon text-center">
                 <h2 class="white" id="wording-countdown">Countdown to Wedding Day<br>18 Desember 2016</h2>
                 <div class="embed-responsive embed-responsive-16by9" id="embed-responsive-16by9">
-                <iframe class="embed-responsive-item" id="streaming-youtube" src="//www.youtube.com/embed/DdFqZfg3YjM?rel=0&autoplay=1&Version=3&loop=1"></iframe>
+                <iframe class="embed-responsive-item" id="streaming-youtube" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen" frameborder="0" src="//www.youtube.com/embed/DdFqZfg3YjM?rel=0&autoplay=1&Version=3&loop=1"></iframe>
                 </div>
-                <div class="row countDown">
+                <div class="row countDown" id="hitung-mundur-jam">
                     <div class="countDown-wrap countDown-wrap-kecil">
                         <span class="digits"></span>
                         <input class="countDown-input day">
@@ -232,7 +232,7 @@
                 <ul class="timeline">
                     <li style="" data-animation-pro-1 style="opacity:0;" data-animation-pro-trigger-1="scroll" data-animation-pro-easing-1="ease-in-out-quad" data-animation-pro-step-1-1="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-1="true" data-animation-pro-scroll-direction-1="down" data-animation-pro-offset-1="300px" data-animation-pro-init-state-1="opacity:0;" data-animation-pro-2 data-animation-pro-trigger-2="scroll" data-animation-pro-step-1-2="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-2="true" data-animation-pro-scroll-direction-2="down" data-animation-pro-offset-2="-100px" data-animation-pro-3 data-animation-pro-trigger-3="scroll" data-animation-pro-easing-3="ease-in-quad" data-animation-pro-step-1-3="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-3="true" data-animation-pro-scroll-direction-3="up" data-animation-pro-offset-3="-150px" data-animation-pro-4 data-animation-pro-trigger-4="scroll" data-animation-pro-easing-4="ease-in-quad" data-animation-pro-step-1-4="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-4="true" data-animation-pro-scroll-direction-4="up" data-animation-pro-offset-4="300px">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                            <img class="img-circle img-responsive" src="img/netlab.jpeg" alt="">
                         </div>
                         <div class="timeline-panel kotakcerita1">
                             <div class="timeline-heading">
@@ -246,7 +246,7 @@
                     </li>
                     <li class="timeline-inverted" data-animation-pro-1 style="opacity:0;" data-animation-pro-trigger-1="scroll" data-animation-pro-easing-1="ease-in-out-quad" data-animation-pro-step-1-1="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-1="true" data-animation-pro-scroll-direction-1="down" data-animation-pro-offset-1="300px" data-animation-pro-init-state-1="opacity:0;" data-animation-pro-2 data-animation-pro-trigger-2="scroll" data-animation-pro-step-1-2="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-2="true" data-animation-pro-scroll-direction-2="down" data-animation-pro-offset-2="-100px" data-animation-pro-3 data-animation-pro-trigger-3="scroll" data-animation-pro-easing-3="ease-in-quad" data-animation-pro-step-1-3="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-3="true" data-animation-pro-scroll-direction-3="up" data-animation-pro-offset-3="-150px" data-animation-pro-4 data-animation-pro-trigger-4="scroll" data-animation-pro-easing-4="ease-in-quad" data-animation-pro-step-1-4="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-4="true" data-animation-pro-scroll-direction-4="up" data-animation-pro-offset-4="300px">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/2.jpg" alt="" style="">
+                            <img class="img-circle img-responsive" src="img/toga.jpeg" alt="" style="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -260,7 +260,7 @@
                     </li>
                     <li data-animation-pro-1 style="opacity:0;" data-animation-pro-trigger-1="scroll" data-animation-pro-easing-1="ease-in-out-quad" data-animation-pro-step-1-1="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-1="true" data-animation-pro-scroll-direction-1="down" data-animation-pro-offset-1="300px" data-animation-pro-init-state-1="opacity:0;" data-animation-pro-2 data-animation-pro-trigger-2="scroll" data-animation-pro-step-1-2="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-2="true" data-animation-pro-scroll-direction-2="down" data-animation-pro-offset-2="-100px" data-animation-pro-3 data-animation-pro-trigger-3="scroll" data-animation-pro-easing-3="ease-in-quad" data-animation-pro-step-1-3="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-3="true" data-animation-pro-scroll-direction-3="up" data-animation-pro-offset-3="-150px" data-animation-pro-4 data-animation-pro-trigger-4="scroll" data-animation-pro-easing-4="ease-in-quad" data-animation-pro-step-1-4="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-4="true" data-animation-pro-scroll-direction-4="up" data-animation-pro-offset-4="300px">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/3.jpg" alt="" style="">
+                            <img class="img-circle img-responsive" src="img/telkomsel.jpeg" alt="" style="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -274,7 +274,7 @@
                     </li>
                     <li class="timeline-inverted" data-animation-pro-1 style="opacity:0;" data-animation-pro-trigger-1="scroll" data-animation-pro-easing-1="ease-in-out-quad" data-animation-pro-step-1-1="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-1="true" data-animation-pro-scroll-direction-1="down" data-animation-pro-offset-1="300px" data-animation-pro-init-state-1="opacity:0;" data-animation-pro-2 data-animation-pro-trigger-2="scroll" data-animation-pro-step-1-2="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-2="true" data-animation-pro-scroll-direction-2="down" data-animation-pro-offset-2="-100px" data-animation-pro-3 data-animation-pro-trigger-3="scroll" data-animation-pro-easing-3="ease-in-quad" data-animation-pro-step-1-3="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-3="true" data-animation-pro-scroll-direction-3="up" data-animation-pro-offset-3="-150px" data-animation-pro-4 data-animation-pro-trigger-4="scroll" data-animation-pro-easing-4="ease-in-quad" data-animation-pro-step-1-4="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-4="true" data-animation-pro-scroll-direction-4="up" data-animation-pro-offset-4="300px">
                         <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/4.jpg" alt="" style="">
+                            <img class="img-circle img-responsive" src="img/cincin.jpeg" alt="" style="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
@@ -286,22 +286,17 @@
                             </div>
                         </div>
                     </li>
-                    <li class="timeline-inverted" data-animation-pro-1 style="opacity:0;" data-animation-pro-trigger-1="scroll" data-animation-pro-easing-1="ease-in-out-quad" data-animation-pro-step-1-1="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-1="true" data-animation-pro-scroll-direction-1="down" data-animation-pro-offset-1="300px" data-animation-pro-init-state-1="opacity:0;" data-animation-pro-2 data-animation-pro-trigger-2="scroll" data-animation-pro-step-1-2="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-2="true" data-animation-pro-scroll-direction-2="down" data-animation-pro-offset-2="-100px" data-animation-pro-3 data-animation-pro-trigger-3="scroll" data-animation-pro-easing-3="ease-in-quad" data-animation-pro-step-1-3="opacity:1;" data-animation-pro-enable-sd-scroll-trigger-3="true" data-animation-pro-scroll-direction-3="up" data-animation-pro-offset-3="-150px" data-animation-pro-4 data-animation-pro-trigger-4="scroll" data-animation-pro-easing-4="ease-in-quad" data-animation-pro-step-1-4="opacity:0;" data-animation-pro-enable-sd-scroll-trigger-4="true" data-animation-pro-scroll-direction-4="up" data-animation-pro-offset-4="300px">
-                        <div class="timeline-image">
-                            <h4 class="timeline-h4">Be Part<br>Of Our<br>Story!</h4>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </div>
     </div>
 </section>
-<section id="wishlist" class="bg-tan white">
+<section id="Galery" class="bg-tan white">
     <div class="container">
         <div class="row pad-bottom0">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading white">Wishlist</h2>
-                <h3 class="section-subheading text-muted white margin-bottom25">Berikut daftar wishlist barang-barang yang mungkin dapat membantu kami dikemudian hari...</h3>
+                <h2 class="section-heading white">Galery</h2>
+                <h3 class="section-subheading text-muted white margin-bottom25">Berikut daftar Galery barang-barang yang mungkin dapat membantu kami dikemudian hari...</h3>
             </div>
         </div>
         <div class="row">
